fixed global css, removed page scrollbar

--- a/src/global.css
+++ b/src/global.css
@@ -1,3 +1,5 @@
+/* Global Styles. Import in gatsby-browser.js */
+
 html {
   font-family: sans-serif;
   -ms-text-size-adjust: 100%;
@@ -186,7 +188,6 @@ textarea {
 html {
   font: 112.5%/1.45em georgia, serif;
   box-sizing: border-box;
-  overflow-y: scroll;
 }
 * {
   box-sizing: inherit;
